# DepotCycle-Device-Lifecycle-Marketplace

./: .gitignore  README.md  metadata.json  prompt.md  questions.md
.tmp/: delivery_architecture_audit_run_1.md  delivery_architecture_audit_run_2.md  delivery_architecture_audit_run_3.md  delivery_architecture_audit_run_4.md  test_coverage_and_readme_audit_report.md
docs/: api-spec.md  design.md
repo/: .env.example  Cargo.toml  README.md  docker-compose.yml  package.json  playwright.config.ts  run_tests.sh
repo/API_tests/: Cargo.toml
repo/API_tests/src/: lib.rs
repo/backend/: .dockerignore  Cargo.toml  Dockerfile
repo/backend/migrations/: 0001_initial.sql  0002_part2_workflows.sql
repo/backend/src/: app.rs  auth.rs  config.rs  db.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs  security.rs  workflows.rs
repo/frontend/: .dockerignore  Cargo.toml  Dockerfile  index.html  nginx.conf  style.css
repo/frontend/src/: main.rs
repo/playwright-tests/: shopper-purchase.spec.ts
repo/unit_tests/: Cargo.toml
repo/unit_tests/src/: lib.rs
sessions/: develop-1.json  develop-1.jsonl  develop-2.json  develop-3.json
