[package]
name = "API_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
backend = { path = "../backend" }
axum = "0.7"
http-body-util = "0.1"
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "migrate"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
uuid = { version = "1", features = ["v4"] }

